# TodoApp

./: .example.env  .gitignore  LICENSE  pyproject.toml
backend/: main.py
backend/data/: core.py  schemas.py
backend/database/: crud.py  pend_user_service.py  schemas.py  todo_service.py  user_service.py
backend/routers/auth/: controller.py  model.py  models.py  otp_manager.py  repo_user.py  service.py
backend/routers/todos/: controller.py  models.py  service.py
backend/routers/user/: controller.py
backend/routers/web/: controller.py
backend/utils/: response_model.py  security.py  sv_logger.py  template.py
fastapi_x_react/: .example.env  README.md
fastapi_x_react/backend/: .example.env  .gitignore  main.py  pyproject.toml  todo.txt
fastapi_x_react/backend/data/: schemas.py
fastapi_x_react/backend/routers/auth/: controller.py  service.py
fastapi_x_react/backend/routers/auth/google/: service.py
fastapi_x_react/backend/routers/auth/pass_recovery/: controller.py  service.py
fastapi_x_react/backend/routers/todos/: controller.py  repo.py
fastapi_x_react/backend/routers/user/: controller.py
fastapi_x_react/backend/routers/user/change_pass/: controller.py
fastapi_x_react/backend/routers/user/delete_account/: controller.py  service.py
fastapi_x_react/backend/routers/web/: controller.py  service.py
fastapi_x_react/backend/scripts/: create_direct_user.py  init_db.py  migration_add_todos_user_fk_on_delete_cascade.sql
fastapi_x_react/backend/utils/: redis_client.py  response_model.py
fastapi_x_react/backend/utils/security/: hashing.py  otp_manager.py  tokens.py
fastapi_x_react/frontend/: package-lock.json  package.json
fastapi_x_react/frontend/src/: App.tsx  index.css  main.tsx
fastapi_x_vanillajs/: .example.env  Dockerfile  README.md
frontend/utils/: components.css  utils.js  var.css
(+124 files in other folders)
